--- a/ContosoUniversity/Views/Student/Index.cshtml
+++ b/ContosoUniversity/Views/Student/Index.cshtml
@@ -1,30 +1,29 @@
 ﻿@model IEnumerable<ContosoUniversity.Models.Student>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Students";
 }
 
-<h2>Index</h2>
+<h2>Students</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table>
     <tr>
-        <th>
-            LastName
-        </th>
-        <th>
-            FirstMidName
-        </th>
-        <th>
-            EnrollmentDate
-        </th>
         <th></th>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Enrollment Date</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.StudentID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.StudentID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.StudentID })
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.LastName)
         </td>
@@ -33,11 +32,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EnrollmentDate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.StudentID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.StudentID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.StudentID })
         </td>
     </tr>
 }
