--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <div class="page">
         <header>
             <div id="title">
-                <h1>Contoso University -Demo</h1>
+                <h1>Discount MailSource</h1>
             </div>
             <div id="logindisplay">
                 @Html.Partial("_LogOnPartial")
