--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -4,5 +4,7 @@
 
 <h2>About</h2>
 <p>
-     Put content here.
+     We've been in the digital printing and color copying business since the 1980s, so we've learned something over the years about quality color printing and top-notch customer service. Whether you're a commercial business looking to print in the tens of thousands or a parent that needs to print 50 invitations for your child's birthday party we have the ability to meet everyone's needs.
+When you call our customer service line during normal business hours, you will always talk to a live human being employed at our actual place of business, not an automated system or an overseas call center. Each order is assigned to a dedicated customer service representative who will be responsible for setting up your files and communicating with you on any questions or issues that arise in the color copying and digital printing process.
+We hold ourselves to a higher standard of printing services than most, and we proudly stand by the quality of our printing. We care about and treat our team members well to ensure they care about your printing job and give it the individual attention it needs. Digital printing is what we know, but customer service is our expertise.
 </p>
