--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -4,3 +4,4 @@
 
 <h2>@ViewBag.Message</h2>
  
+ <p>If you have ever been to FedEx Office, OfficeMax, or the UPS Store, you know that the cost of a color copy can vary from place to place, but you are probably wondering why our color copies are so much cheaper than Kinko's and the like. That is a great question and here's a quick breakdown of how our printing services vary from a traditional walk-in printing company.</p>
