--- a/ContosoUniversity/Views/Course/Create.cshtml
+++ b/ContosoUniversity/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Student
+﻿@model ContosoUniversity.Models.Course
 
 @{
     ViewBag.Title = "Create";
@@ -9,34 +9,33 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>Student</legend>
+        <legend>Course</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LastName)
+            @Html.LabelFor(model => model.Title)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.LastName)
-            @Html.ValidationMessageFor(model => model.LastName)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.FirstMidName)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.FirstMidName)
-            @Html.ValidationMessageFor(model => model.FirstMidName)
+            @Html.EditorFor(model => model.Title)
+            @Html.ValidationMessageFor(model => model.Title)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.EnrollmentDate)
+            @Html.LabelFor(model => model.Credits)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.EnrollmentDate)
-            @Html.ValidationMessageFor(model => model.EnrollmentDate)
+            @Html.EditorFor(model => model.Credits)
+            @Html.ValidationMessageFor(model => model.Credits)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.DepartmentID, "Department")
+        </div>
+        <div class="editor-field">
+            @Html.DropDownList("DepartmentID", String.Empty)
+            @Html.ValidationMessageFor(model => model.DepartmentID)
         </div>
 
         <p>
